services/media/radarr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    cert-manager.io/cluster-issuer: intranet-dns01-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "from rules"
      secretName: "radarr-tls"
  rules:
    - host: "radarr.int.fivebytestudios.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: webui
