services/media/radarr/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: bazarr
              app.kubernetes.io/name: bazarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: jellyseerr
              app.kubernetes.io/name: jellyseerr-chart
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: prowlarr
              app.kubernetes.io/name: prowlarr
        # Requests from ingress controller
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
              app.kubernetes.io/instance: traefik
      ports:
        - protocol: TCP
          port: webui
  
  egress:
    # Allow DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: coredns
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Allow VPN http proxy
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: qbittorrent
              app.kubernetes.io/name: qbittorrent
      ports:
        - protocol: TCP
          port: http-proxy
    # Services controlled by radarr
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: qbittorrent
              app.kubernetes.io/name: qbittorrent
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: prowlarr
              app.kubernetes.io/name: prowlarr
      ports:
        - protocol: TCP
          port: webui
    # Allow triggering jellyfin library scan
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: jellyfin
              app.kubernetes.io/name: jellyfin
      ports:
        - protocol: TCP
          port: http
